<resources>
    <string name="app_name">sxRnHelper</string>
    <string name="calendar_page_title">日历提醒</string>
    <string name="calendar_page_subtitle">把新增的日历事件，变成不会错过的提醒</string>
    <string name="calendar_mascot_content_description">折纸猫日历助手</string>
    <string name="calendar_monitor_badge">实时守护</string>
    <string name="calendar_monitor_headline">把重要日程，交给我记住</string>
    <string name="calendar_monitor_checkbox">开启自动监听</string>
    <string name="calendar_monitor_status_disabled">日历事件监听未开启</string>
    <string name="calendar_monitor_status_listening">正在监听日历新增事件</string>
    <string name="calendar_permission_required">需要日历读写权限，监听已关闭</string>
    <string name="calendar_monitor_status_error">读取日历失败，监听已关闭</string>
    <string name="calendar_permission_denied">未获得日历读写权限，监听已关闭</string>
    <string name="notification_permission_required">需要通知权限，监听已关闭</string>
    <string name="notification_permission_denied">未获得通知权限，监听已关闭</string>
    <string name="calendar_permission_rationale_title">需要日历权限</string>
    <string name="calendar_permission_rationale_message">允许读取并删除日历，才能发现新增事件并转换为提醒。</string>
    <string name="notification_permission_rationale_title">需要通知权限</string>
    <string name="notification_permission_rationale_message">允许发送通知，才能及时提示添加提醒和到点提醒。</string>
    <string name="exact_alarm_permission_required">需要允许设置闹钟和提醒，监听已关闭</string>
    <string name="exact_alarm_permission_unavailable">无法打开“闹钟和提醒”设置，监听已关闭</string>
    <string name="calendar_permission_cancel">取消</string>
    <string name="calendar_permission_allow">允许</string>
    <string name="calendar_events_title">已捕获的事件</string>
    <string name="calendar_events_hint">自动整理</string>
    <string name="calendar_events_empty">还没有捕获到事件\n开启监听后会显示在这里</string>
    <string name="calendar_event_delete_title">删除日历事件？</string>
    <string name="calendar_event_delete_message">删除后将取消对应提醒。</string>
    <string name="calendar_event_delete">删除</string>
    <string name="calendar_event_delete_content_description">删除日历事件</string>
    <string name="calendar_event_no_title">无标题</string>
    <string name="calendar_event_time">时间：%1$s</string>
    <string name="calendar_event_time_unavailable">时间未知</string>
    <string name="calendar_event_description">说明：%1$s</string>
    <string name="calendar_event_no_reminder">提醒：无</string>
    <string name="calendar_event_reminders">提醒：%1$s</string>
    <string name="calendar_reminder_format">提前 %1$d 分钟（%2$s）</string>
    <string name="calendar_reminder_method_alert">弹窗</string>
    <string name="calendar_reminder_method_default">默认</string>
    <string name="calendar_reminder_method_email">邮件</string>
    <string name="calendar_reminder_method_sms">短信</string>
    <string name="calendar_reminder_method_alarm">闹钟</string>
    <string name="calendar_reminder_method_unknown">方式 %1$d</string>
    <string name="calendar_reminder_added_title">添加提醒成功</string>
    <string name="calendar_reminder_added_content">%1$s 提醒 %2$s</string>
    <string name="calendar_reminder_title">提醒</string>
    <string name="calendar_notification_channel_name">日历提醒</string>
    <string name="calendar_notification_channel_description">日历提醒和添加结果通知</string>
</resources>
